# Watchglass

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  specification.md
src/watchglass/: __init__.py
src/watchglass/checks/: __init__.py  common.py  config.py  docker.py  github_actions.py  secrets.py  sensitive.py
src/watchglass/cli/: app.py
src/watchglass/core/: __init__.py  files.py  scanner.py
src/watchglass/models/: __init__.py  finding.py
src/watchglass/reporters/: __init__.py  html.py  json.py  terminal.py
tests/: test_cli.py  test_models.py  test_reporters.py  test_scanner.py
tests/fixtures/secure_project/: .env.example  Dockerfile  config.yml
tests/fixtures/secure_project/.github/workflows/: ci.yml
tests/fixtures/vulnerable_project/: .env  Dockerfile  config.yml
tests/fixtures/vulnerable_project/.github/workflows/: ci.yml
