[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchglass"
version = "0.1.0"
description = "Local-first security hygiene scanner for Git repositories."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Watchglass contributors" }]
keywords = ["security", "git", "audit", "cli", "devsecops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = ["jinja2>=3.1.4,<4", "rich>=13.7,<15", "typer>=0.12,<1"]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9", "ruff>=0.5,<1"]

[project.scripts]
watchglass = "watchglass.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/watchglass"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
exclude = [".deps", ".builddeps", ".wheelcheck"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
